TH-215 - Fixed the text that wasn't align when screen was resized.

--- a/teamhuddle-api/app/assets/stylesheets/application.css.scss
+++ b/teamhuddle-api/app/assets/stylesheets/application.css.scss
@@ -452,7 +452,7 @@ li {
 .btn {
   font-weight: 300;
   letter-spacing: 1px;
-  padding: 10px 40px;
+  padding: 10px 30px;
   color:whitesmoke;
   border:none;
 }
